# ChangeLog for media-libs/libdvdnav
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdnav/ChangeLog,v 1.60 2011/10/10 23:03:33 beandog Exp $

*libdvdnav-4.2.0 (10 Oct 2011)

  10 Oct 2011; Steve Dibb <beandog@gentoo.org> libdvdnav-4.1.3_p1168.ebuild,
  -libdvdnav-4.2.0_pre1243.ebuild, +libdvdnav-4.2.0.ebuild,
  libdvdnav-9999.ebuild:
  Move 4.2.0_pre ebuild to release; Fix SRC_URI to use upstream; Update
  homepage

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -libdvdnav-0.1.10.ebuild,
  -files/libdvdnav-0.1.10-build.patch,
  -files/libdvdnav-0.1.10-dontbuild-examples.patch:
  old

*libdvdnav-4.2.0_pre1243 (10 Oct 2011)

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  +libdvdnav-4.2.0_pre1243.ebuild:
  New snapshot.

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild, libdvdnav-9999.ebuild:
  Remove useless libtool files.

  19 Jan 2011; Jeremy Olexa <darkside@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  Add other Prefix keywords

  12 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  Marked ~sparc-solaris, ~x86-solaris, ~ppc-macos, ~x86-macos

  05 Nov 2010; Mark Loeser <halcy0n@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  Stable for ppc64; bug #308777

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org> libdvdnav-4.1.3_p1168.ebuild:
  Stable for HPPA (bug #329703).

  31 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  ia64/sh/sparc stable wrt #308777

  17 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  Stable on alpha, bug #308777

  26 Apr 2010; Markus Meier <maekke@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  arm stable, bug #308777

  18 Apr 2010; Markus Meier <maekke@gentoo.org>
  libdvdnav-4.1.3_p1168.ebuild:
  x86 stable, bug #308777

  11 Apr 2010; <nixnut@gentoo.org> libdvdnav-4.1.3_p1168.ebuild:
  ppc stable #308777
