@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdvdread
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdread/ChangeLog,v 1.79 2011/10/10 22:57:36 beandog Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdread/ChangeLog,v 1.80 2012/01/09 21:24:57 ago Exp $
+
+  09 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libdvdread-4.2.0.ebuild:
+  Stable for AMD64, wrt bug #398141
 
   10 Oct 2011; Steve Dibb <beandog@gentoo.org> libdvdread-4.1.3_p1168.ebuild,
   libdvdread-4.2.0.ebuild, libdvdread-9999.ebuild:
